# arsenalero

./: .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
crates/arsenalero-core/: Cargo.toml
crates/arsenalero-core/src/: case.rs  classification_tests.rs  classify.rs  domain.rs  error.rs  inventory.rs  journal.rs  lib.rs  markdown.rs  path_policy.rs  receipt.rs  reconcile.rs  task6_tests.rs  task8_tests.rs  task9_tests.rs
crates/arsenalero-mcp/: Cargo.toml
crates/arsenalero-mcp/src/: main.rs  schema.rs  server.rs  tools.rs
docs/adr/: 0001-global-mcp.md  0002-deterministic-classification.md  0003-observer-not-enforcer.md
docs/architecture/: ARSENALERO_MCP_SDD_v1.3.md
docs/audit/: ARSENALERO_MCP_AUDIT_AI_ENGINEERING_v1.3.md  CHANGELOG_v1.3.md  INPUT_REPORT_v1.1.md  REVIEW_FINDINGS_v1.3.md
docs/evidence/: CONTEXT7_EVIDENCE_PROTOCOL.md  bootstrap-manifest.json  context7-ledger.md  plugin-smoke-test.md
docs/governance/: BOOTSTRAP_CHARTER.md  BRANCHING_MODEL.md  BRANCH_CONSOLIDATION_B1_AUTHORITY.md  POST_RELEASE_STABILIZATION_S1_AUTHORITY.md
docs/governance/archive/: POST_RELEASE_STABILIZATION_S1_AUTHORITY.md
docs/plans/: ARSENALERO_MCP_IMPLEMENTATION_PLAN_v1.3.md
docs/reports/: bootstrap-report.md
docs/security/: threat-model.md
evals/: README.md  cases.jsonl  labels.jsonl
tests/fixtures/broken_reference/: SKILL.md  task6-golden.json
tests/fixtures/complete_case/: SKILL.md
tests/fixtures/complete_case/resources/: guide.md
tests/fixtures/digest_drift/: SKILL.md  validation.md
tests/fixtures/duplicate_id/: SKILL.md
tests/fixtures/oversized_resource/: SKILL.md
tests/fixtures/path_escape/: README.txt  SKILL.md
tests/fixtures/resource_drift/: SKILL.md
tests/fixtures/skill_drift/: SKILL.md
tests/fixtures/symlink_escape/: README.txt  SKILL.md
tests/fixtures/unresolved/: SKILL.md
tests/fixtures/valid_bilingual/: SKILL.md  task6-golden.json
tests/integration/: mcp_bootstrap_stdio.rs  version_flag.rs
(+7 files in other folders)
