[package]
name = "arsenalero-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rmcp = { version = "=2.2.0", default-features = false, features = ["server", "transport-io"] }
tokio = { version = "=1.49.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "mcp_bootstrap_stdio"
path = "../../tests/integration/mcp_bootstrap_stdio.rs"

[lints]
workspace = true
