[package]
name = "arsenalero-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arsenalero-core = { path = "../arsenalero-core" }
rmcp = { version = "=2.2.0", default-features = false, features = ["server", "transport-io"] }
ring = "=0.17.14"
schemars = "=1.2.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.49.0", default-features = false, features = ["macros", "rt-multi-thread"] }
uuid = { version = "=1.24.0", default-features = false, features = ["std"] }

[[test]]
name = "mcp_bootstrap_stdio"
path = "../../tests/integration/mcp_bootstrap_stdio.rs"

[lints]
workspace = true
